# g213_colours

./: Cargo.toml  MIT-License  README.md  rgb.txt
src/: commands.rs  g213_keyboard.rs  lib.rs  main.rs  x11_colours.rs  x11_colours_v2.rs
