[package]
name = "g213_colours"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A utility to set the G213 keyboard backlight. Based on https://github.com/SebiTimeWaster/G213Colors."
documentation = "See README.md"
repository = "https://github.com/shahzadnaeem/g213_colours"
readme = "README.md"
keywords = ["usb", "g213", "logitech", "x11"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.2"
hex = "0.4.3"
lazy_static = "1.4.0"
dirs = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
users = "0.11.0"
libc = "0.2.141"

[dev-dependencies]

[lib]
doctest = false

[[bin]]
name = "g213-cols"
test = false
bench = false
