[package]
name = "g213_colours"
version = "0.3.6"
edition = "2021"
license = "MIT"
description = "A utility to set the G213 keyboard backlight. Based on https://github.com/SebiTimeWaster/G213Colors."
documentation = "https://github.com/shahzadnaeem/g213_colours/blob/main/README.md"
repository = "https://github.com/shahzadnaeem/g213_colours"
readme = "README.md"
keywords = ["g213", "logitech", "x11", "colours", "cli"]

[dependencies]
rusb = "0.9.3"
hex = "0.4.3"
lazy_static = "1.4.0"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
users = "0.11.0"
libc = "0.2.153"
rand = "0.8.5"

[dev-dependencies]

[lib]
doctest = false

[[bin]]
name = "g213-cols"
test = false
bench = false
